2007-04-23  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp: Added arcsec(), arccosec(), arsech(), arcosech()
	and length() functions to the equation solver.

	* vector.cpp: Fixed calculation of variance().

2007-04-18  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added properties of new
	equation defined device.

	* input.cpp: Storing appropriate environment pointer in each
	instantiated component.

	* equation.cpp: Added some more functionality necessary for the
	new equation defined device.

	* circuit.h (class circuit): Environments can now be stored in
	components.

2007-04-15  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Added parameters
	for the new exponential current and voltage source.

	* vector.cpp: Fixed implementation of variance().  And thereby
	the one of stddev().

2007-04-14  Stefan Jahn  <stefan@lkcc.org>

	* differentiate.h (class differentiate): Added many derivatative
	functions.  This is preparation towards equation defined devices.

	* equation.cpp: Added copy constructors and re-creator functions
	for each equation node.  Also added basic differentiation
	functionality.

2007-04-11  Stefan Jahn  <stefan@lkcc.org>

	* scan_zvr.l, check_zvr.cpp: Supporting some more data formats of
	the ZVR analyser.

2007-04-07  Stefan Jahn  <stefan@lkcc.org>

	* qucsdefs.h (qucs_definition_available): Updated 
	parameter ranges of verilog-ams devices.

	* check_mdl.cpp: Fixed a variable substitution bug due to
	e.g. "- 950.0m" (mark the space).

2007-04-04  Stefan Jahn  <stefan@lkcc.org>

	* nasolver.cpp: Improved the source-stepping algorithm.

	* hbsolver.cpp: Fixed order of frequencies in the multi-
	dimensional case.  Also added functionality for multi-
	dimensional frequency/time transformations.

2007-03-24  Stefan Jahn  <stefan@lkcc.org>

	* eqnsys.cpp: Some more comments on the SVD diagonalization
	process added.

2007-03-21  Stefan Jahn  <stefan@lkcc.org>
